--- a/client/angular.json
+++ b/client/angular.json
@@ -66,8 +66,8 @@
         "serve": {
           "options": {
             "ssl": true,
-            "sslCert": "./ssl/localhost.pem",
-            "sslKey": "./ssl/localhost-key.pem"
+            "sslCert": "./ssl/server.crt",
+            "sslKey": "./ssl/server.key"
           },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
