--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
+    "@angular/animations": "^14.3.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.3.2",
+    "bootswatch": "^5.3.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-toastr": "^14.0.0",
+    "ngx-toastr-bs5-angular14": "^1.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
